Fix output:  html wrap bug, output from last line

--- a/templates/skeleton_css.css
+++ b/templates/skeleton_css.css
@@ -180,6 +180,8 @@ optgroup {
   font-weight: bold;
 }
 table {
+  font-family: monospace, monospace;
+  font-size : 0.8em;
   border-collapse: collapse;
   border-spacing: 0;
 }
